# beef_bot

./: Cargo.toml  notes.md
src/: main.rs
src/brain/: mod.rs
src/clients/: mod.rs
src/deciders/: message_decider.rs  mod.rs
src/handlers/: handle_chat_message.rs  handle_notification.rs  handle_unknown_message.rs  handle_welcome_message.rs  mod.rs
src/setup/: mod.rs
