[package]
name = "beef_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures-util = "0.3.31"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.4.0", features = [
    "cuda",
    "full",
] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version = "0", features = ["native-tls"] }
tungstenite = "0.26.2"
